force-app/main/default/objects/vlocity_cmt__ObjectFacet__c/vlocity_cmt__ObjectFacet__c.object-meta.xml
<CustomObject>
    <description>Represents a facet of an object or object type layout. Facets display as the first level of grouping in the page layout such as a tab or a left-side navigational link.</description>
    <label>Vlocity Object Facet</label>
    <nameField>
        <label>ObjectFacet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Object Facets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>