force-app/main/default/objects/vlocity_cmt__ObjectFacet__c/fields/vlocity_cmt__ObjectLayoutId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ObjectLayoutId__c</fullName>
    <label>Object Layout</label>
    <referenceTo>vlocity_cmt__ObjectLayout__c</referenceTo>
    <relationshipLabel>Vlocity Object Facets</relationshipLabel>
    <relationshipName>VlocityObjectFacets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>